fixed pop up z-index

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -2150,7 +2150,7 @@ text-align: center;
 .attributeInputs .selected {border:1px solid #4598ed;}
 .stockFeedbackBox {position:relative;height:19px;width:335px;background-color:white;border-top:1px solid #B4B4B4;border-right:1px solid #B4B4B4;border-bottom:1px solid #B4B4B4;float:right;color:#333;padding:4px 0 0 5px;}
 .productselectedwrapper {height:19px;background-color:#FFF; width: auto; text-align:left;color:#333;padding:4px 0 0 5px; font-size:12px; font-weight:bold; height:auto}
-div.zoomPopupWrapper {width:auto!important;height:auto!important; z-index:10000 !important;}
+div.zoomPopupWrapper {width:auto!important;height:auto!important; z-index:10002 !important;}
 #productdetail-altview {float:left;text-align:center;}  #productdetail-altview a {display:block;float:left;margin:10px 0 0 20px;}
 #viewLargeThumbs img {margin:auto 10px; width: 10%;}
 #viewLargeImg {text-align:center;margin-top:10px;}
